MGNLUI-3077 Make sure sort indicator doesn't overlap with the resizer-element.

--- a/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
+++ b/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
@@ -41,6 +41,7 @@
     margin-right: -2px;
     padding: 0 2px;
     width: 1px;
+    position: relative;
   }
 
   .sortable:hover .v-table-sort-indicator:before {
